# autonomous_ship

./: CMakeLists.txt
forPC/: auto.py  autoV2.py  handleCamera.py  handleGps.py  handleImu.py  handleLidar.py  hopping.py  main.py  pcMain.py  rudder.py  spliceLidar.py
forRasPi/: AutoMode.py  DFRobot_RaspberryPi_Expansion_Board.py  GPS.py  RcMode.py  dd.py  getImage.py  getImu.py  gpsPublisher.py  imuPublish.py  imuPublisher.py  imuver2.py  ledAndButton.py  main.py  modifyLidarData.py  motor.py  planC.py  planC.py.save  planC.py.save.1  test.py
launch/: Pc.launch  RasPi.launch  RasPi.launch.save  RasPi.launch.save.1  autoMode.launch  cam.launch  cam_yolo_v3_at_once.launch  rcMode.launch
msg/: imu.msg  lidar.msg  motorValue.msg
py/: getImu.py
